# URSA

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: build.yml
src/: main.cpp
